fix mobile text visible on desktop&tablet

--- a/src/main/resources/src/components/MainPage/Clients/Clients.scss
+++ b/src/main/resources/src/components/MainPage/Clients/Clients.scss
@@ -34,6 +34,9 @@
       }
     }
   }
+  .clients__mobile-text {
+    display: none;
+  }
   .clients__item span {
     flex: 0 1 20%;
     &:nth-child(2) {
